--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -23,3 +23,9 @@
 	animation: 1s fade-animation;
 	animation-fill-mode: forwards;
 }
+
+.card-box {
+	border: 1px solid #D1D5DB;
+  border-radius: 0.375rem;
+	padding: 0.25rem;
+}
