--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,12 +11,12 @@
 
 @keyframes fade-animation {
 	0% {
-		transform: translateX(-100%);
+		/* transform: translateX(-20%); */
 		opacity: 0;
 	}
 
 	100% {
-		transform: translateX(0);
+		/* transform: translateX(0); */
 		opacity: 1;
 	}
 }
